# subsoil

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
src/subsoil/: __main__.py  usb_manager.py
src/subsoil/cli/: constants.py  prompter.py  signal_manager.py
src/subsoil/logger/: gzip_rotating_file_handler.py  logger_setup.py
src/subsoil/sensors/: autoconfig.py  sensor_connection_config.py
src/subsoil/vfs/: fs.py
storage/: sensor_device_details.json
